# hinata

./: .clang-format  .gitignore  CLAUDE.md  Cargo.toml  HINATA.md  MEMORY.md  README.md  TODO.txt  TODO_UPDATE  build  build.sh  install.sh  rust.txt
.claude/: settings.local.json
agent/: HINATA.md  build  hnt-agent.py  hnt-shell-apply.md  hnt-shell-apply.py
agent/browse/: HINATA.md  README.md  build  build.md  headless-browse.js  headless-browse.js.md  main.py  main.py.md  old-qb.py
agent/browse/prompts/: 0.md
agent/headlesh/: HINATA.md  README.md  build  build.md  headlesh.c  headlesh.md
agent/prompts/: main-shell_agent.md
agent/qb-eval/: README.md  async_example.js  build  example.js  main.py  wait_until_file.c
agent/research/: 0-base-sh-pty.py  1-bash.py  2-o3.py  3-demo.py  4-demo.py  5-signal-end.py  6-signal-end-general.py  headlesh.c  watch-foo.py
agent/research/tui/: 1.py  10.c  2.py  3.py  7.py  8-TODO.md  8.c  mini_mux.py  minimal_tui.py  simple_tui.py
agent/research/web/: 0-textContent.js  1-domStructure.js  1747457033-visibility.md  cdp.py
agent/tui/: README.md  build  tui-pane.c  tui-select.c
agent/web/: qb-eval.py
agent/web/research/: 0-textContent.js  2-domFiltered.js  headless-browse.js  qb-exec
archive/agent/: README.md  build  build.md  hnt-agent.py  hnt-agent.py.md  hnt-shell-apply.py
archive/agent/headlesh/: .gitignore  HINATA.md  README.md  build  headlesh.c
archive/agent/qb-eval/: async_example.js  main.py
archive/agent/research/: 1-bash.py  2-o3.py  4-demo.py  5-signal-end.py  6-signal-end-general.py  7-signal-general-stdin-BROKEN.py  7-signal-general-stdin.c  headlesh.c  headlesh2.c  headlesh3.c  watch-foo.py
archive/chat/: HINATA.md  build.md  hnt-chat.py  hnt-chat.py.md
archive/edit/: HINATA.md  README.md  build  build.md  hnt-apply.c  hnt-edit.py
archive/edit/llm-pack/: README.md  build.md  main.c.md
archive/edit/prompts/: names.md
archive/llm/: HINATA.md  build
archive/llm/research/rust/hinata_chat_tools/: Cargo.toml  build
chat/: HINATA.md  README-wip.md  README.md  build  hnt-chat  hnt-chat.py
edit/: .gitignore  HINATA.md  README.md  build  hnt-apply.c  hnt-apply.md  hnt-edit  hnt-edit.md  hnt-edit.py
edit/llm-pack/: .gitignore  HINATA.md  README.md  build  main.c
edit/llm-pack/test-dir/: we_hate_js.js
edit/prompts/: 01-targetreplace.md  main-file_edit.md
edit/research/: 01  01-deepseek-v3-1.txt  01.md
edit/research/aider/: README.md  diff-system-gemini.md  log.diff  log.json
edit/research/test/: main.py
fmt/: claude-0.md  hinata.kak
fmt/highlight/: README.md  build  highlight-md-stream  highlight-md-stream.py  hlmd-st  hlmd-st.py  pyproject.toml
fmt/highlight/research/: main.py  parser1.py  parser2.py  parser3.py  parser4.py  pygmentize.c  pyproject.toml  rich.c  rich.c.md  test.md
go/: .gitignore
go/hnt-agent/: go.mod  go.sum
go/hnt-apply/: go.mod
go/hnt-chat/: .gitignore  Makefile  go.mod  go.sum
go/hnt-edit/: 1752355349.txt  go.mod  go.sum
go/hnt-llm/: .gitignore  Makefile  README.md  go.mod
go/llm-pack/: go.mod
headlesh/src/: error.rs  main.rs
hnt/: .fmt2  .gitignore  README.md  build  main.c  pyproject.toml
hnt-agent/src/: main.rs
hnt-apply/: Cargo.toml
hnt-apply/src/: lib.rs
hnt-chat/: Cargo.toml
hnt-chat/src/: main.rs
hnt-edit/src/: main.rs
hnt-llm/: Cargo.toml  README.md
hnt-llm/src/: main.rs
hnt-pack/: README.md
hnt-pack/src/: lib.rs
hnt-tui/: README.md
hnt-tui/src/: lib.rs  main.rs
hnt/research/litellm/: import-trace.txt  main.py
hnt/research/openai-python/: README.md  libs.py  minimal-streaming.c  minimal.c  minimal.py
libhinata-core/: Cargo.toml
libhinata-core/src/: chat.rs  escaping.rs  lib.rs  llm.rs
llm/: .gitignore  HINATA.md  README.md  build  build.md  escape.c  escape.md  main.c  main.md  pyproject.toml
llm/research/openai-python/: minimal-streaming.c  minimal.c
llm/research/rust/: Cargo.toml  build
llm/research/rust/hnt-llm/: Cargo.toml
llm/research/rust/hnt-llm/src/: main.rs
llm/util/: escape-test.py
memory/: 0-cli  1751226262.md  1751228187.md  1751237422.md  1751237429.md  1751401974.md  1751477796.md  1751484887.md  MEMORY.md
memory/prompts/: 0.txt  1.txt
prompts/: HINATA-0-intro.md  main-shell_agent.md
prompts/hnt-agent/: 03-agent-tools.md  04-generalnotproject-and-xmldashes.md  HINATA-1-edit.md  HINATA-2-systeminfo.md
prompts/hnt-edit/: 03-role.md
research-go/hnt-agent/: main.go
rust/: Cargo.toml  build.sh  install.sh
rust/bins/headlesh/: Cargo.toml
rust/bins/headlesh/src/: error.rs  lib.rs  main.rs
rust/bins/hnt-agent/: Cargo.toml
rust/bins/hnt-agent/src/: main.rs
rust/bins/hnt-chat/: Cargo.toml
rust/bins/hnt-edit/: Cargo.toml
rust/bins/hnt-llm/: Cargo.toml
rust/bins/hnt-llm/src/: main.rs
rust/bins/hnt-tui/: Cargo.toml
rust/bins/hnt-web/: Cargo.toml
rust/crates/hinata-core/: Cargo.toml
rust/crates/hinata-core/src/: chat.rs  escaping.rs  key_management.rs  lib.rs  llm.rs
rust/headlesh/: README.md
rust/hnt-agent/: Cargo.toml
rust/hnt-agent/src/: main.rs
rust/hnt-apply/: Cargo.toml
rust/hnt-chat/: Cargo.toml
rust/hnt-edit/: Cargo.toml
rust/hnt-edit/src/: main.rs
rust/hnt-pack/: Cargo.toml
rust/hnt-tui/: Cargo.toml
rust/hnt-tui/src/: lib.rs  main.rs
share/: hinata.kak
src/: Cargo.toml
src/headlesh/: Cargo.toml  README.md
src/headlesh/src/: lib.rs
src/hnt-agent/: Cargo.toml
src/hnt-agent/src/: main.rs  spinner.rs
src/hnt-edit/: Cargo.toml
src/hnt-edit/src/: main.rs
src/hnt-llm/: Cargo.toml  README.md
src/hnt-tui/: Cargo.toml
src/hnt-tui/src/: inline_editor.rs  lib.rs
src/hnt-web/: Cargo.toml
src/libhinata-core/: Cargo.toml
todo/: TODO.txt  r.txt
util/: check_cargo_path  commit  create_logo  find_docs.py  install_rust  rust_format_files.py
util/browse/: HINATA.md  README.md
util/tui/: README.md
web/: HINATA.md  README.md  REAMDE.md  build  build.md  hnt-web.md  hnt-web.py  main.py  pyproject.toml
web/reference/: 1748277242-build.sh
web/static/: HINATA.md  conversation.html  conversation.md  index.html  index.md
(+63 files in other folders)
