[package]
name = "hnt-edit"
version = "0.1.0"
edition = "2021"

[dependencies]
hinata-core = { path = "../libhinata-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dirs = "5.0"
log = "0.4"
simplelog = "0.12"
tempfile = "3.10"
crossterm = "0.27"
futures-util = "0.3"
shlex = "1.3"
which = "4.4"
chrono = { version = "0.4", features = ["clock"] }
