[package]
name = "hnt-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
termios = "0.3"
vt100 = "0.15.2"

[dependencies.portable-pty]
version = "0.9.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[lib]
name = "hnt_tui"
path = "src/lib.rs"

[[bin]]
name = "hnt-tui"
path = "src/main.rs"
