[package]
name = "headlesh"
version = "0.1.0"
edition = "2021"

[lib]
name = "headlesh"
path = "src/lib.rs"

[[bin]]
name = "headlesh"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.28", features = ["signal", "process", "fs"] }
fs2 = "0.4"
simplelog = "0.12.2"
dirs = "5.0.1"
log = "0.4"
tempfile = "3"
thiserror = "1.0"
