[package]
name = "hnt-edit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
dirs = "5.0"
futures-util = "0.3"
hinata-core = { path = "../libhinata-core" }
hnt-apply = { path = "../hnt-apply" }
hnt-pack = { path = "../hnt-pack" }
log = "0.4"
shlex = "1.3"
simplelog = "0.12"
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
which = "4.4"
