[package]
name = "hnt-edit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.29", features = ["crossterm"] }
dirs = "5.0"
futures-util = "0.3"
hinata-core = { path = "../libhinata-core" }
hnt-apply = { path = "../hnt-apply" }
hnt-pack = { path = "../hnt-pack" }
log = "0.4"
shlex = "1.3"
simplelog = "0.12"
tempfile = "3.10"
tui-textarea = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
which = "4.4"
