[package]
name = "hnt-llm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hnt-llm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
hinata-core = { path = "../libhinata-core" }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
simplelog = "0.12.2"
log = "0.4.21"

