[package]
name = "headlesh"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
nix = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
daemonize = "0.5.0"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"