[package]
name = "hnt-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
hinata-core = { path = "../../crates/hinata-core" }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
headlesh = { path = "../headlesh" }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
regex = "1"
