[package]
name = "hnt-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
hinata-core = { path = "../../crates/hinata-core" }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
headlesh = { path = "../headlesh" }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
regex = "1"
log = "0.4.27"
simplelog = "0.12.2"
hnt-tui = { path = "../hnt-tui" }
dirs = "5.0"
