[package]
name = "hnt-llm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hnt-llm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env"] }
hinata-core = { path = "../../crates/hinata-core" }
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
futures-util = "0.3.30"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

