[package]
name = "hinata-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
async-stream = "0.3.5"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0.1"
dirs-next = "2.0"
futures-util = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
rpassword = "7.3.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.1"

