[package]
name = "hnt-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
dirs = "5.0.1"
env_logger = "0.11.3"
futures-util = "0.3.30"
hinata-escape = { path = "../hinata-escape" }
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
regex = "1.10.4"
rpassword = "7.3.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
shellexpand = "3.1.0"
tokio = { version = "1.37.0", features = ["full"] }