[package]
name = "hinata_chat_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies for hnt-llm
anyhow = "1.0.82"
base64 = "0.22.1"
dirs = "5.0.1"
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
rpassword = "7.3.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }

# Shared dependency for both binaries
clap = { version = "4.5.4", features = ["derive", "env"] }
